# gdpc

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Advanced.py  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Land_of_Oz.py  README.md  Start_Here.py  Troglo's Memoir  __init__.py  allroundTest.py  bash.exe.stackdump  bitarray.py  bitarray_deprecated_MC_1_15.py  blockColors.py  bulkBlockTest.py  custom_structures.py  direct_interface.py  example.py  flow_gener.py  frameworkTest.py  gener.py  generate_map.py  geometry.py  interface.py  interfaceUtils.py  lookup.py  mapUtils.py  openCVTest.py  pyproject.toml  release-guide.md  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.py  simpleAgentTest.py  stressTest.py  terraces.py  (+5 more)
1.16 Block Test Map/: README.md
docs/: .gitignore  Makefile  mkdocs.yml  modules.uxf  requirements.txt
examples/: README.md  Start_Here.py  emerald_city.py  quick_example.py  visualizeMap.py  visualize_map.py
gdpc/: __init__.py  bitarray.py  block.py  block_data_tools.py  block_data_util.py  block_state_tools.py  block_state_util.py  direct_interface.py  editor.py  editor_tools.py  example.py  gdpce_geometry.py  gdpce_interface.py  geometry.py  http_interface.py  interface.py  interface_toolbox.py  lookup.py  minecraft_tools.py  model.py  nbt_tools.py  nbt_util.py  tests.py  toolbox.py  transform.py  util.py  utility.py  utils.py  vector_tools.py  vector_util.py  visualizeMap.py  worldLoader.py  worldSlice.py  world_slice.py
gdpc.egg-info/: PKG-INFO  SOURCES.txt
playground/: asyncOperations.py  frameworkTest.py  gener.py  (+6 more)
(+99 files in other folders)
